# r00_game

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: main.rs
src/engine/: audio_manager.rs  component.rs  drawable_component.rs  game.rs  mod.rs  scene.rs
src/engine/drawable_implements/: generator.rs  image_plane.rs  mod.rs  plane.rs  text.rs
src/engine/rendering/: drawable_object.rs  material.rs  mesh.rs  mod.rs
src/r00_avg_game/: gameplay.rs  mod.rs
src/r00_avg_game/data/: avg_item.rs  mod.rs
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
static/: index.html
