[package]
name = "r00_avg_game"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
sdl2 = {version = "0.37.0", features = ["image", "ttf", "mixer"] }
gl = "0.14.0"
nalgebra-glm = "0.19.0"
emscripten_main_loop = "0.1.1"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["Window"] }